Skip to content

snapshot: image not centered when using cropping

Steps to reproduce:

  • Open a file (video or image)
  • Crop it (e.g. Video > Crop > 1:1)
  • Take a snapshot

=> The image is not centered on the snapshot (left part is captured).

I can reproduce with any video output.

It does not work properly with VLC 2.2.6 either.

VLC 3.0.0 nightly\ OS: Windows 10 x64 1703

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information