snapshot: fix snapshots cropping

The snapshot picture was created using picture_Copy(), which does not
handle offsets. As a consequence, snapshots of cropped videos were
broken.

Use picture_Clone() (shallow copy) instead, then copy the crop settings
from the format.

Fixes #18970

Signed-off-by: Romain Vimont <rom@rom1v.com>
Acked-by: Thomas Guillem <thomas@gllm.fr>
Signed-off-by: Jean-Baptiste Kempf <jb@videolan.org>