src/video_output/snapshot.c
@@ -112,18 +112,18 @@ bool vout_snapshot_IsRequested(vout_snapshot_t *snap)
 }
 void vout_snapshot_Set(vout_snapshot_t *snap,
                        const video_format_t *fmt,
-                       const picture_t *picture)
+                       picture_t *picture)
 {
     if (!fmt)
         fmt = &picture->format;
 
     vlc_mutex_lock(&snap->lock);
     while (snap->request_count > 0) {
-        picture_t *dup = picture_NewFromFormat(fmt);
+        picture_t *dup = picture_Clone(picture);
         if (!dup)
             break;
 
-        picture_Copy(dup, picture);
+        video_format_CopyCrop( &dup->format, fmt );
 
         dup->p_next = snap->picture;
         snap->picture = dup;
